﻿i-MSCP ChangeLog

------------------------------------------------------------------------------------------------------------------------
Git 1.6.x
------------------------------------------------------------------------------------------------------------------------

BACKEND 
    Added: composer.phar compatibility symlink for backward compatibility with plugins
    Added: getBlocByRef(), processByRef() and replaceBlocByRef() subroutines (iMSCP::TemplateParser)
    Added: Support for .timer unit files (Systemd init provider)
    Added: Version check (minimum version) for non-core Perl modules (iMSCP::Requirements)
    Enhancement: Make it possible to define placeholders in placeholders (iMSCP::TemplateParser)
    Enhancement: Make it possible to delay execution of the 'start', 'restart' and 'reload' actions (iMSCP::Service)
    Enhancement: Make it possible to discard files/directories when clearing a directory (iMSCP::Dir::clear)
    Enhancement: Make it possible to install Composer anywhere (iMSCP::Composer)
    Enhancement: Make it possible to override default composer.json (iMSCP::Composer)
    Enhancement: Make it possible to reconfigure many items at once by passing comma separated list of items (iMSCP::Getopt)
    Enhancement: Make it possible to support multiple distributions (other than Debian like distributions) by providing abstract classes for all i-MSCP servers.
    Enhancement: Make the iMSCP::Composer package usable by 3rd-party components, without relying on event manager
    Fixed: All Perl packages must be in iMSCP namespace
    Fixed: Avoid localization of `$@' variable
    Fixed: Can't call method "XXXXXX" on unblessed reference -- Object as event listener (iMSCP::EventManager -- regression fix)
    Fixed: Couldn't restore SQL databases -- Can't locate object method "selectall_array" via package "DBI::db"
    Fixed: Couldn't restore uncompressed databases