@@ -2,6 +2,7 @@
 <install>
     <copy mode="0750">${LOCAL_USR_SBIN}/imscp-dpkg-post-invoke.pl</copy>
     <copy>${SYSTEM_ENGINE_ROOT}/tools/imscp-disable-accounts</copy>
+    <copy>${SYSTEM_ENGINE_ROOT}/tools/imscp-info.pl</copy>
     <copy>${SYSTEM_ENGINE_ROOT}/tools/imscp-mountall</copy>
     <copy>${SYSTEM_ENGINE_ROOT}/tools/imscp-net-traffic-logger</copy>
 </install>
